<resources>
    <string name="app_name">App_s4675880</string>

    <!--Login Page-->
    <string name="login1">Welcome Student!</string>
    <string name="login2">To the University Course Registration App</string>
    <string name="enter_user">Enter your username</string>
    <string name="enter_pass">Enter your password</string>
    <string name="forgot">Forgot Password?</string>
    <string name="sign">Sign in</string>
    <string name="recycle">RecyclerView</string>


    <!--Second Screen Page-->
    <string name="good1">Good Morning!</string>
<!--<string name="name">Loraine Asis</string>-->
    <string name="sch_next_class">NEXT CLASS</string>
    <string name="sch_date_time">Mon 09, 10:00am</string>
    <string name="sch_course_name">Introduction to Digital Artworks</string>
    <string name="title_activity_second_screen">SecondScreenActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="details">Your Details</string>
    <string name="user">user</string>
    <string name="pass">pass</string>
    <string name="logout">Logout</string>

    <!--RecyclerView & Back Button-->
    <string name="recycle_head">This is the RecyclerView for CourseActivity</string>
    <string name="recycle_subhead">[Course Name, Course Code, Short Description]</string>
    <string name="back">Go Back</string>

</resources>