<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/gradient_bg">

    <!--Icon Picture-->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        app:layout_constraintTop_toTopOf="parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="30dp"
            android:gravity="center">
            <ImageView
                android:layout_width="190dp"
                android:layout_height="190dp"
                android:src="@drawable/logo" />
        </LinearLayout>
    </RelativeLayout>


    <!--Login Card-->
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        app:cardCornerRadius="30dp"
        android:layout_marginBottom="-28dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:cardBackgroundColor="@color/light_grey"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="28dp"
            android:gravity="center">

            <!--Heading & Sub-Heading-->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login1"
                android:textSize="32sp"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login2"
                android:textColor="@color/black"
                android:alpha="0.5" />

            <!--Margin spacing-->
            <View
                android:layout_width="wrap_content"
                android:layout_height="25dp" />
            <!--Username Placeholder-->
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/shape_login"
                android:elevation="10dp"
                android:textColor="@color/black"
                android:id="@+id/usernameInput"
                android:textSize="14sp"
                android:hint="@string/enter_user"
                android:drawableStart="@drawable/person"
                android:drawablePadding="10dp"
                android:layout_margin="10dp"
                android:padding="20dp"/>
            <View
                android:layout_width="wrap_content"
                android:layout_height="7dp" />
            <!--Password Placeholder-->
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/shape_login"
                android:elevation="10dp"
                android:textColor="@color/black"
                android:id="@+id/passwordInput"
                android:textSize="14sp"
                android:hint="@string/enter_pass"
                android:inputType="textPassword"
                android:drawableStart="@drawable/lock"
                android:drawablePadding="10dp"
                android:layout_margin="10dp"
                android:padding="20dp" />

            <!--Forgot Password-->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forgot"
                android:textColor="@color/blue_base"
                android:textStyle="bold"
                android:layout_margin="25dp"/>

            <!--Sign in Button-->
            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/btnSecondScreen"
                android:text="@string/sign"
                android:background="@drawable/shape_btn_sign"
                android:textColor="@color/white"
                android:padding="25dp">
            </androidx.appcompat.widget.AppCompatButton>

            <View
                android:layout_width="wrap_content"
                android:layout_height="75dp" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>